Configure perf client with ZGC and tuned JVM settings (#281)
* Configure perf client with ZGC and tuned JVM settings

Use ZGC for low-latency GC pauses, set reasonable heap bounds
(128m-1g), and allocate 512m for direct memory used by Netty buffers.

Signed-off-by: Matteo Merli <mmerli@apache.org>

* Increase initial heap size to 512m

Signed-off-by: Matteo Merli <mmerli@apache.org>

---------

Signed-off-by: Matteo Merli <mmerli@apache.org>